# migents-book

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py
app/: config.py  database.py  main.py  models.py  scheduler.py  toolkit.py
app/agents/: __init__.py  action.py  automatic.py  reflection.py
app/routers/: __init__.py  agents.py  mock_community.py
